--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container header__links">
         <div class="header__element">Главная</div>
         <div class="header__element">Сеансы</div>
-        <div class="header__element">Афиша</div>
+        <a href="tickets.html" class="header__element">Покупка билетов</a>
         <div class="header__element">Поддержка</div>
         <div class="header__element">Возврат билетов</div>
       </div>
@@ -40,7 +40,11 @@
         <div class="card"><img class="img" src="EUh9kdIXsAAsOza.jpg" /></div>
         <div class="card"><img class="img" src="EUh9kdIXsAAsOza.jpg" /></div>
       </div>
+      <div class="title">
+        Премьеры
+      </div>
       <div class="container page">
+        
         <iframe
           width="560"
           height="315"
